--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             hh = h / 2,
 
             opts = {
-                strings: ['HAPPY', 'BIRTHDAY!', 'ĐỖ PHƯƠNG UYÊN'],
+                strings: ['Chúc mừng', 'Bạn đã lọt vào danh sách hư', 'ĐỖ PHƯƠNG UYÊN'],
                 charSize: 120,
                 charSpacing: 120,
                 lineHeight: 120,
